# MyCProject_HomeAutomation

./: .gitignore  Button.c  CMakeLists.txt  Database.c  Definitions.h  ModbusRtu.c  Socket.c  Socket.h  Subprograms.c  button.h  database.h  dht11.c  dht11.h  main.c  modbusRtu.h
